--- a/RupBNB/CSS/apartments.css
+++ b/RupBNB/CSS/apartments.css
@@ -16,7 +16,7 @@
     align-items: center;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     border-radius: 10px;
-    padding-bottom: 5px;
+    padding:10px;
 }
 
 .card {
@@ -43,3 +43,105 @@
     padding: 0;
     max-width: 90%;
 }
+
+
+
+
+
+/* Slider range for price */
+
+#range
+{
+margin: 0;
+padding: 0;
+font-family: 'Barlow Condensed' , sans-serif;
+display: flex;
+align-items: center;
+justify-content: center;    
+}
+.priceSlider
+{
+    width: 200px;
+    padding: 10px 20px;
+}
+.priceSlider h1
+{
+font-size: 17px;
+font-weight: bold;
+}
+.priceSlider p
+{
+font-size: 10px;
+margin-top: 20px;    
+}
+.min-max label
+{
+font-size: 14px;
+float: left;
+margin-right: 5px;
+line-height: 1.6;    
+}
+.min
+{
+float: left;    
+}
+.max
+{
+float: right;    
+}
+.min-max
+{
+width: 90%;
+max-width: 200px;
+margin: 0 auto;
+}
+.min-max span
+{
+font-size: 10px;
+text-align: center;
+display: inline-block;
+width: 30px;
+border: 1px solid #dedede;    
+}
+.min-max-range
+{
+padding: 30px 0px 20px 0px;    
+}
+.range
+{
+-webkit-appearance:none;
+appearance:none;
+width: 50%;
+height: 10px;
+max-width: 400px;
+background-color: #dedede;
+margin: 0;
+padding: 0;
+outline: none;
+float: left;  
+}
+.range::-webkit-slider-thumb
+{
+-webkit-appearance:none;
+appearance:none;
+background-color: #0070BF;
+height: 10px;
+width: 10px;
+border-radius: 50%;
+cursor: pointer;
+}
+.range::moz-range-thumb
+{
+-webkit-appearance:none;
+appearance:none;
+background-color: #0070BF;
+height: 10px;
+width: 10px;
+border-radius: 50%;
+cursor: pointer;
+}
+
+
+
+
+
