--- a/RupBNB/CSS/profilePage.css
+++ b/RupBNB/CSS/profilePage.css
@@ -8,7 +8,7 @@
 #profileCard {
     border-radius: 6px;
     display: inline-block;
-    height: 100vh;
+    min-height:800px;
     margin: 1rem;
     width: 50%;
     box-shadow: 0 12px 13px rgba(0,0,0,0.16), 0 12px 13px rgba(0,0,0,0.16);
@@ -27,7 +27,7 @@
 
 #orderContainer {
     margin-top: 1rem;
-    height: 50%;
+    max-height: 400px;
 }
 
 
