add modal for reservation
fix scrolling for mobile in apartments.html

--- a/RupBNB/CSS/seeApart.css
+++ b/RupBNB/CSS/seeApart.css
@@ -54,6 +54,14 @@ h4 {
     margin: 0 auto;
 }
 
+#modalImage {
+    width: 90%;
+    border-radius: 1.5rem;
+    height: 200px;
+    margin-top: 0.6rem;
+
+}
+
 /* For Mobile */
 @media only screen and (max-width: 960px) {
     #reserve {
