--- a/RupBNB/CSS/apartments.css
+++ b/RupBNB/CSS/apartments.css
@@ -9,8 +9,8 @@
 
 #searchFilterContainer {
     background: transparent;
-    margin: 2rem auto;
-    max-width: 90%;
+    margin: 2rem auto 0;
+    max-width: 95%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,15 +25,16 @@
 }
 
 .card-body {
-    padding-top: 1px;
+    padding: 0;
+    margin-top: 5px;
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
 .img-apartment {
-    border-radius: 10%;
-    max-height: 150px;
+    border-radius: 10px;
+    height: 13rem;
 }
 
 .detailBTN {
@@ -54,7 +55,8 @@
 #map {
     height: 100%;
     max-height: 400px;
-    width: 100%;
+    width: 90%;
+    margin-top: 10px;
 }
 
 #cardMapContainer {
