--- a/RupBNB/CSS/apartments.css
+++ b/RupBNB/CSS/apartments.css
@@ -56,7 +56,7 @@
     height: 100%;
     max-height: 400px;
     width: 90%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 #cardMapContainer {
@@ -79,7 +79,19 @@
 }
 
 
+.spinner {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+}
 
+.form-control[readonly] {
+    background: #fff;
+}
 
 
 
