--- a/RupBNB/CSS/seeApart.css
+++ b/RupBNB/CSS/seeApart.css
@@ -1,5 +1,5 @@
 #apartmentDetails {
-    padding-bottom: 20px;
+    padding-bottom: 35px;
 }
 
 #map {
@@ -15,15 +15,20 @@ h4 {
     vertical-align: top;
 }
 
-#more {
+.more {
     display: none;
 }
 
 #readBTN {
-    width: 100%;
+    width: 30%;
     background-color: transparent;
     color: black;
+    border: 1px solid black;
+    border-radius: 25px;
+    display: none;
 }
+
+
 
 #reserve {
     background-color: white;
@@ -50,21 +55,43 @@ h4 {
 .card {
     background-color: transparent;
     border: none;
-    width: 80%;
     margin: 0 auto;
 }
 
 #image{
     border-radius: 10px;
+    height: 400px;
+    width: 100%;
 }
-
-
 
 #modalImage {
     width: 90%;
     height: 200px;
     margin-top: 0.6rem;
     border-radius: 10px;
+}
+
+.reviewImg {
+    width: 56px;
+    height: 56px;
+}
+
+#scoreIconForReviewSection {
+    margin-top: 3px;
+    margin-right: 7px;
+}
+
+.reviewComment {
+    font-size: 0.9rem;
+}
+
+.reviewBTN {
+    background-color: transparent;
+    color: black;
+    text-decoration: underline;
+    text-decoration-color: black;
+    border: none;
+    font-weight: 500;
 }
 
 /* For Mobile */
@@ -76,7 +103,17 @@ h4 {
         width: 100%;
     }
     #image{
+        height: 100%;
+        width: 100%;
         max-height: 300px;
+        max-width: 350px;
+    }
+    #readBTN {
+        width: 100%;
+    }
+    .reviewImg {
+        width: 50px;
+        height: 50px;
     }
 }
 
