--- a/RupBNB/CSS/main.css
+++ b/RupBNB/CSS/main.css
@@ -4,6 +4,9 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+button, input[type=button] {
+  border-radius: 25px !important;
+}
 
 /* Scroll Bar */
 
