--- a/RupBNB/CSS/invoice.css
+++ b/RupBNB/CSS/invoice.css
@@ -61,3 +61,17 @@
 #moreDetails { 
     margin:0px;
 }
+#hostInfo {
+    text-decoration: underline;
+}
+
+/* For Mobile */
+@media only screen and (max-width: 960px) {
+    #image {
+        height: 100%;
+        width: 100%;
+        max-height: 400px;
+        max-width: 450px;
+        margin:0 auto;
+    }
+}
