--- a/RupBNB/CSS/invoice.css
+++ b/RupBNB/CSS/invoice.css
@@ -53,7 +53,7 @@
 
 
 #image { 
-    height:470px;
+    height:445px;
 }
 #apartmentDetails {
     padding-bottom:0px;
@@ -64,7 +64,9 @@
 #hostInfo {
     text-decoration: underline;
 }
-
+#apartmentView {
+    font-size:14px;
+}
 /* For Mobile */
 @media only screen and (max-width: 960px) {
     #image {
