hide admin message box on first time in chat

--- a/RupBNB/CSS/chat.css
+++ b/RupBNB/CSS/chat.css
@@ -277,3 +277,15 @@
         overflow-x: auto
     }
 }
+
+.chat .chat-history .other-message{
+    max-width: 45%;
+}
+
+.hide{
+    display:none;
+}
+
+.show {
+    display: block;
+}
