--- a/RupBNB/CSS/seeApart.css
+++ b/RupBNB/CSS/seeApart.css
@@ -126,6 +126,9 @@ h4 {
         width: 50px;
         height: 50px;
     }
+    .fa-bookmark {
+        margin-right: 10%;
+    }
 }
 
 
@@ -133,3 +136,7 @@ h4 {
     height: 50px;
     border-radius: 100%;
 }
+
+
+
+
