--- a/RupBNB/CSS/seeApart.css
+++ b/RupBNB/CSS/seeApart.css
@@ -96,6 +96,11 @@ h4 {
     font-weight: 500;
 }
 
+
+/*.pager button {
+    width
+}*/
+
 /* Swall Buttons */
 .swal2-styled.swal2-deny {
     background-color: blueviolet;
