--- a/RupBNB/CSS/profilePage.css
+++ b/RupBNB/CSS/profilePage.css
@@ -2,18 +2,23 @@
 .profileContainer  {
     margin: 3% auto 0;
     text-align: center;
+    max-height: 800px;
 }
   
 
 #profileCard {
     border-radius: 6px;
     display: inline-block;
-    min-height:800px;
-    margin: 1rem;
+    max-height:800px;
+    margin: 1rem auto;
     box-shadow: 0 12px 13px rgba(0,0,0,0.16), 0 12px 13px rgba(0,0,0,0.16);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    transition: all 0.3s cubicprofileContainer-bezier(.25,.8,.25,1);
+    padding-bottom: 20px;
 }
 
+#chatInputDiv {
+    display: none;
+}
   
 .profilePic{
     border-radius:100%;
@@ -21,6 +26,14 @@
     width:132px;
     height:128px;
     box-shadow: 0 13px 26px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.16);
+}
+
+#orderContainer {
+    max-height: 600px;
+}
+
+.card {
+    border: 1px solid grey;
 }
 
 .card-img-top {
@@ -38,14 +51,16 @@
 .bottom {
     margin: 0 auto;
     margin-top: auto;
-    width: 75%;
+    width: 90%;
 }
 
 #nav-futureReservations-tab, #nav-pastReservations-tab, 
 #nav-likedApartments-tab, #nav-chat-tab {
     border: 1px solid gray;
     border-radius: 25px;
-    margin: 0 auto;
+    width: 170px;
+    padding: 8px;
+    margin-bottom: 3px;
     color: black;
 }
 
@@ -54,8 +69,9 @@
     color: white;
 }
 
-.nav-tabs {
-    border: none;
+#nav-tab {
+    justify-content: space-evenly;
+    margin-bottom: 5px;
 }
 
 
