--- a/RupBNB/CSS/seeApart.css
+++ b/RupBNB/CSS/seeApart.css
@@ -34,8 +34,8 @@ h4 {
 
 #reserve {
     background-color: white;
-    height: 60px;
-    width: 20%;
+    height: 70px;
+    width: 30%;
     margin: 0 auto;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -47,11 +47,17 @@ h4 {
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
 }
+#price { 
+    margin-bottom:0px;
+}
+#minNight {
+    margin-top: 0px;
+}
 
 #bookBTN {
     margin-right: 1rem;
     margin-top: 0.5rem;
-    height: 70%;
+    height: 65%;
 }
 
 .card {
